# EmbeddedLinuxPractice

./: .gitignore
libs/: CMakeLists.txt
libs/my_device/: CMakeLists.txt  my_device.c  my_device.h
libs/my_strlib/: CMakeLists.txt  my_strlib.c  my_strlib.h
mouse_pos/: CMakeLists.txt  mouse_pos.c
my_first_kmod/: my_first_k_mod.c
